# rs-xml2json

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.alpine  Dockerfile.debian  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
python/rs_xml2json/: __init__.py  cli.py
python/xml2json/: __init__.py  cli.py
src/: error.rs  lib.rs
src/converter/: mod.rs  walker.rs
src/schema/: mod.rs  model.rs  parser.rs  type_map.rs
tests/: integration_test.rs  sample.xml  sample.xsd
