[package]
name = "rs-xml2json"
# Placeholder; CI overwrites this from the git tag on release (see .github/workflows/build.yml).
version = "0.0.0"
edition = "2021"

[lib]
name = "rs_xml2json"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
quick-xml = "0.37"
serde_json = "1.0"
thiserror = "2.0"
